started editing the wedding party section

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,11 +11,11 @@
     <!-- <h1 class="text-center">5 flex-box tips you should know</h1> -->
 
 <ul class="nav nav-pills nav-justified">
-  <li role="presentation" class="active"><a href="#columns-equal">Columns Equal Height</a></li>
-  <li role="presentation"><a href="#order">Order</a></li>
-  <li role="presentation"><a href="#centering">Centering Aligment</a></li>
- <li role="presentation"><a href="#responsive">Responsive Grid</a></li>
-<li role="presentation"><a href="#sticky">Sticky Footer</a></li>
+  <li role="presentation" class="active"><a href="#columns-equal">RSVP</a></li>
+  <li role="presentation"><a href="#order">Home</a></li>
+  <li role="presentation"><a href="#centering">Photos</a></li>
+ <li role="presentation"><a href="#responsive">Details</a></li>
+<li role="presentation"><a href="#sticky">Registry</a></li>
 </ul>
 
 
@@ -29,22 +29,15 @@
     <div class="box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo illum necessitatibus a asperiores hic, fugit perferendis sit est excepturi quasi facilis voluptate aliquam dicta fuga facere alias distinctio corporis quas, natus ullam minima. Dicta pariatur aliquid optio esse veritatis. Sed officia, ab numquam fugiat error ratione ullam reprehenderit possimus, dolore blanditiis sequi, saepe minus vero.</div>
 </div> -->
 
-<!--2. COLUMNS WITH THE EQUAL HEIGHT-->
-<!-- <h3 class="text-center" id="order">2. Order with flex-box</h3>
-<div class="container-order">
-  <div class="box blue text-center">1</div>
-  <div class="box breeze text-center">2</div>
-  <div class="box yellow text-center">3</div>
-</div> -->
+
 
 
 <!--2. Horizontal and vertical alignment-->
-<!-- <h3 class="text-center" id="centering responsive">
-  <img src="/images/piano-name-tag.png" alt="">
-</h3> -->
-<h1 class="title text-center" id="responsive">
-  The Wedding Of Scott & Jahnava
-</h1>
+<!-- <h3 class="text-center" id="centering responsive"></h3> -->
+<div id = "testID" class="title text-center" id="responsive">
+  <br>
+  <h1 style="margin-top:0;">The Wedding Of Scott & Jahnava</h1>
+</div>
 <div id= 'header-pic'class="flex-center-center">
 <!-- <div class="box"> -->
   <img id='rainbow-springs' src="/images/rainbowSprings.png" alt=""> </div>
@@ -61,7 +54,7 @@
      </div>
        <br>
      <div class='metStory text-center header'>
-       <h4>Scott and I met in the piano room of a little venue downtown. Scott was playing solo piano and enjoying his night. I ventured by and interrupted his song by nonchalantly striking a "C" chord. Scott didn't seem to mind the intrusion and playfully said "now you have to sit down and play a song with me". Scott and I played "Heart and Soul" and talked for a while. Thereafter, we became friends and had random rendezvous including the beach, springs, furniture assembly, and cleaning my apartment fans at three in the morning. We started out as friends, but Scott had a crush on me from the beginning. He gave me this adorable note that said "Will you go out with me, Yes or no?”. I couldn’t picture myself without him, so I checked "yes". I definitely made the right decision, because now we're engaged to be friends for a lifetime.</h4>
+       <h4>Scott and I met in the piano room of a little venue downtown. Scott was playing solo piano and enjoying his night. I ventured by and interrupted his song by nonchalantly striking a "C" chord. Scott didn't seem to mind the intrusion and playfully said "now you have to sit down and play a song with me". Scott and I played "Heart and Soul" and talked for a while. Thereafter, we became friends and had random rendezvous including the beach, springs, furniture assembly, and cleaning my apartment fans at three in the morning. Scott gave me this adorable note that said "Will you go out with me, Yes or no?”. I couldn’t picture myself without him, so I checked "yes". Now, we're engaged to be friends for a lifetime!</h4>
      </div>
    </div>
    <!-- This column 25% width -->
@@ -76,13 +69,24 @@
 </div>
 </div>
 
+<!-- 2. COLUMNS WITH THE EQUAL HEIGHT -->
+<h3 class="text-center header" id="order">Wedding Party</h3>
+<div class="container-order">
+  <div id='Jayanti' class="blue text-center wedding-party">Jayanti</div>
+  <div class="breeze text-center wedding-party">Yamuna</div>
+  <div class="yellow text-center wedding-party">Chay</div>
+  <div class="pink text-center wedding-party">Amy</div>
+</div>
+
 <!--Sticky Footer-->
-<h3 class="text-center" id="sticky">5. Sticky Footer</h3>
+<h3 class="text-center header" id="sticky">love</h3>
 <div class="sticky-container">
-<div class="sticky-content text-center">Content</div>
+<div id='love-video'class="sticky-content text-center">video
+</div>
 <div class="sticky-footer text-center">footer</div>
 </div>
 
+</div>
 <script src="/js/app.js" charset="utf-8"></script>
   </body>
 </html>
