--- a/public/html/index.html
+++ b/public/html/index.html
@@ -35,8 +35,7 @@
 <!--2. Horizontal and vertical alignment-->
 <!-- <h3 class="text-center" id="centering responsive"></h3> -->
 <div id = "testID" class="title text-center" id="responsive">
-  <br>
-  <h1 style="margin-top:0;">The Wedding Of Scott & Jahnava</h1>
+  <h1 id='main-title' style="margin-top:0;">The Wedding Of Scott & Jahnava</h1>
 </div>
 <div id= 'header-pic'class="flex-center-center">
 <!-- <div class="box"> -->
