added more style

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,16 +10,10 @@
   <body>
     <!-- <h1 class="text-center">5 flex-box tips you should know</h1> -->
 
-<ul class="nav nav-pills nav-justified">
-  <li role="presentation" class="active"><a href="#columns-equal">RSVP</a></li>
-  <li role="presentation"><a href="#order">Home</a></li>
-  <li role="presentation"><a href="#centering">Photos</a></li>
- <li role="presentation"><a href="#responsive">Details</a></li>
-<li role="presentation"><a href="#sticky">Registry</a></li>
-</ul>
 
 
-<!-- <h3 class="text-center" id="columns-equal">1. Columns with the equal height</h3> -->
+
+
 
 <!-- 1. COLUMNS WITH THE EQUAL HEIGHT-->
 
@@ -37,6 +31,16 @@
 <div id = "testID" class="title text-center" id="responsive">
   <h1 id='main-title' style="margin-top:0;">The Wedding Of Scott & Jahnava</h1>
 </div>
+
+<!-- <h3 class="small-space" id="columns-equal"></h3> -->
+<ul class="nav nav-pills nav-justified">
+  <li role="presentation" class="active"><a href="#columns-equal">RSVP</a></li>
+  <li role="presentation"><a href="#order">Home</a></li>
+  <li role="presentation"><a href="#centering">Photos</a></li>
+ <li role="presentation"><a href="#responsive">Details</a></li>
+<li role="presentation"><a href="#sticky">Registry</a></li>
+</ul>
+
 <div id= 'header-pic'class="flex-center-center">
 <!-- <div class="box"> -->
   <img class='responsive' id='rainbow-springs' src="/images/rainbowSprings.png" alt=""> </div>
