--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,43 +8,23 @@
      <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <!-- <h1 class="text-center">5 flex-box tips you should know</h1> -->
-
-
-
-
-
-
-<!-- 1. COLUMNS WITH THE EQUAL HEIGHT-->
-
-<!-- <div class="container-flex">
-    <div class="box">Lorem ipsum dolor sit amet.</div>
-    <div class="box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore velit autem, minima libero, sit a numquam mollitia quaerat deserunt quas tempora nulla fugit laborum, ex.</div>
-    <div class="box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo illum necessitatibus a asperiores hic, fugit perferendis sit est excepturi quasi facilis voluptate aliquam dicta fuga facere alias distinctio corporis quas, natus ullam minima. Dicta pariatur aliquid optio esse veritatis. Sed officia, ab numquam fugiat error ratione ullam reprehenderit possimus, dolore blanditiis sequi, saepe minus vero.</div>
-</div> -->
-
-
-
 
 <!--2. Horizontal and vertical alignment-->
-<!-- <h3 class="text-center" id="centering responsive"></h3> -->
 <div id = "testID" class="title text-center" id="responsive">
-  <h1 id='main-title' style="margin-top:0;">The Wedding Of Scott & Jahnava</h1>
+  <h1 id='main-title' style="margin-top:0;">The Wedding of Scott & Jahnava</h1>
 </div>
 
-<!-- <h3 class="small-space" id="columns-equal"></h3> -->
 <ul class="nav nav-pills nav-justified">
-  <li role="presentation" class="active"><a href="#columns-equal">RSVP</a></li>
-  <li role="presentation"><a href="#order">Home</a></li>
+  <li role="presentation"><a href="#columns-equal">Home</a></li>
+  <li role="presentation"><a href="#order">RSVP</a></li>
   <li role="presentation"><a href="#centering">Photos</a></li>
  <li role="presentation"><a href="#responsive">Details</a></li>
 <li role="presentation"><a href="#sticky">Registry</a></li>
 </ul>
 
 <div id= 'header-pic'class="flex-center-center">
-<!-- <div class="box"> -->
   <img class='responsive' id='rainbow-springs' src="/images/rainbowSprings.png" alt=""> </div>
-<!-- </div> -->
+
 <!--Responsive Grid with flexbox-->
 <h3 class="text-center header" id="responsive">How We Met</h3>
 <div class="container-flex responsive">
@@ -90,7 +70,6 @@
 </div>
 
 <!--Sticky Footer-->
-<!-- <h3 class="text-center header" id="sticky">love</h3> -->
 <div class="sticky-container">
 <div class="sticky-content text-center">
   <div class="video-container" >
@@ -99,11 +78,17 @@
   </div>
 
 </div>
-<div class="sticky-footer text-center">footer</div>
+<div class="sticky-footer text-center">
+  <i class="fas fa-heart"></i>
+  <p id= 'small-text'>Site By Jahnava Farmer</p>
+</div>
 </div>
 
 </div>
 <script src="/js/app.js" charset="utf-8"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+
+
 
   </body>
 </html>
