added rsvp page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -23,7 +23,8 @@
 </ul>
 
 <div id= 'header-pic'class="flex-center-center">
-  <img class='responsive' id='rainbow-springs' src="/images/rainbowSprings.png" alt=""> </div>
+  <img class='responsive' id='rainbow-springs' src="/images/rainbowSprings.png" alt="">
+</div>
 
 <!--Responsive Grid with flexbox-->
 <h3 class="text-center header" id="responsive">How We Met</h3>
@@ -76,8 +77,8 @@
     <iframe id="lovevideo" class='text-center responsive' width="600" height="400"
      src="https://www.youtube.com/embed/SN9X0Kjki5s?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
   </div>
-
 </div>
+
 <div class="sticky-footer text-center">
   <i class="fas fa-heart"></i>
   <p id= 'small-text'>Site By Jahnava Farmer</p>
